@@ -1,10 +1,11 @@
-/*	$NetBSD: io.c,v 1.7 2004/04/07 17:46:47 ross Exp $	*/
+/*	$NetBSD: io.c,v 1.8 2004/04/11 13:35:06 he Exp $	*/
 
 /*
  * io.c - input/output routines for Phantasia
  */
 
 #include "include.h"
+#undef bool
 #include <curses.h>
 
 void
