@@ -1,4 +1,4 @@
-/*	$NetBSD: main.c,v 1.13 2004/04/07 17:46:47 ross Exp $	*/
+/*	$NetBSD: main.c,v 1.14 2004/04/11 13:35:06 he Exp $	*/
 
 /*
  * Phantasia 3.3.2 -- Interterminal fantasy game
@@ -57,6 +57,7 @@
  */
 
 #include "include.h"
+#undef bool
 #include <curses.h>
 
 int	main(int, char **);
